objects/Product_Support_Agent__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Level_1_and_level_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Level 1 and level 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Expert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Novice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Product Support Agents</relationshipLabel>
        <relationshipName>Product_Support_Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_level_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature level 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Feature_Level_1__c.Product_Feature__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Feature__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product_Feature_Level_1__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Level_1__c</referenceTo>
        <relationshipLabel>Product Support Agents</relationshipLabel>
        <relationshipName>Product_Support_Agents1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_feature_level_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature Level 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Feature_Level_2__c.Product_Feature_Level_1__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Feature_level_1__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product_Feature_Level_2__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Level_2__c</referenceTo>
        <relationshipLabel>Product Support Agents</relationshipLabel>
        <relationshipName>Product_Support_Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Support_Center__c</fullName>
        <label>Support Center</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Support_Agents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Support Agent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Feature__c</columns>
        <columns>User__c</columns>
        <columns>Support_Center__c</columns>
        <columns>Expertise__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAN-{0000000000}</displayFormat>
        <label>Product Agents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Support Agents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>